# cep-78-enhanced-nft

./: Cargo.toml  Makefile  README.md  rust-toolchain
client-js/: .eslintrc.js  TUTORIAL.md  package-lock.json  package.json  tsconfig.json
client-js/examples/: common.ts  install.ts  usage.ts
client-js/scripts/: copy-and-convert-wasms.ts
client-js/src/: index.ts
client/balance_of_session/: Cargo.toml
client/balance_of_session/src/: main.rs
client/get_approved_session/: Cargo.toml
client/get_approved_session/src/: main.rs
client/is_approved_for_all_session/: Cargo.toml
client/is_approved_for_all_session/src/: main.rs
client/mint_session/: Cargo.toml
client/mint_session/src/: main.rs
client/owner_of_session/: Cargo.toml
client/owner_of_session/src/: main.rs
client/transfer_from_session/: Cargo.toml
client/transfer_from_session/src/: main.rs
client/transfer_session/: Cargo.toml
client/transfer_session/src/: main.rs
client/updated_receipts/: Cargo.toml
client/updated_receipts/src/: main.rs
contract/: Cargo.toml
contract/src/: constants.rs  error.rs  events.rs  lib.rs  main.rs  metadata.rs  modalities.rs  utils.rs
contract/src/events/: events_cep47.rs  events_ces.rs  events_native.rs
contracts/client/balance_of_session/: Cargo.toml
contracts/client/balance_of_session/src/: main.rs
contracts/client/get_approved_session/: Cargo.toml  README.md
contracts/client/is_approved_for_all_session/: Cargo.toml  README.md
contracts/client/is_approved_for_all_session/src/: main.rs
contracts/client/mint_session/: Cargo.toml  README.md
contracts/client/owner_of_session/: Cargo.toml  README.md
contracts/client/transfer_session/: Cargo.toml  README.md
contracts/client/transfer_session/src/: main.rs
contracts/client/updated_receipts/: Cargo.toml
contracts/client/updated_receipts/src/: main.rs
contracts/contract/: Cargo.toml
contracts/contract/src/: main.rs  metadata.rs  modalities.rs
contracts/contract/src/events/: events_ces.rs  events_native.rs
contracts/test-contracts/mangle_named_keys/: Cargo.toml
contracts/test-contracts/minting_contract/: Cargo.toml
contracts/test-contracts/minting_contract/src/: main.rs
contracts/test-contracts/transfer_filter_contract/: Cargo.toml
docs/: modalities.md
docs/tutorials/: standard-migration-tutorial.md
docs/tutorials/getting-started/: interacting-with-NFTs.md
test-contracts/mangle_named_keys/: Cargo.toml
test-contracts/mangle_named_keys/src/: main.rs
test-contracts/minting_contract/: Cargo.toml
test-contracts/minting_contract/src/: main.rs
test-contracts/transfer_filter_contract/: Cargo.toml
test-contracts/transfer_filter_contract/src/: main.rs
tests/: Cargo.toml
tests/fixtures/cep78_1.5.1-ee1.5.6-minted/: state.json
tests/fixtures/cep78_1.5.1-ee1.5.6-minted/global_state/: data.lmdb  data.lmdb-lock
tests/src/: acl.rs  burn.rs  costs.rs  events.rs  installer.rs  lib.rs  metadata.rs  mint.rs  set_variables.rs  transfer.rs  upgrade.rs
tests/src/utility/: constants.rs  installer_request_builder.rs  support.rs
