[package]
name = "contract"
version = "1.5.1"
edition = "2021"

[dependencies]
casper-contract = { version = "4.0.0", default-features = false, optional = true }
casper-types = { version = "4.0.1", default-features = false }
serde = { version = "1.0.80", default-features = false }
serde_json = { version = "1.0.59", default-features = false }
serde-json-wasm = { version = "0.5.1", default-features = false }
base16 = { version = "0.2.1", default-features = false }
casper-event-standard = { version = "0.5.0", default-features = false }
hex = { version = "0.4.3", default-features = false }

[[bin]]
name = "contract"
path = "src/main.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true

[features]
default = ["contract-support"]
contract-support = ["dep:casper-contract"]
