[package]
name = "tests"
version = "2.0.0"
edition = "2021"

[dev-dependencies]
contract = { path = "../contract", default-features = false }
serde = { version = "1.0.80", default-features = false }
serde_json = { version = "1.0.59", default-features = false }
once_cell = "1"
blake2 = { version = "0.9.0", default-features = false }
base16 = { version = "0.2.1", default-features = false }
rand = "0.8.5"
sha256 = "1.0.3"
casper-event-standard = { git = "https://github.com/deuszex/casper-event-standard.git ", branch = "feat-2.0",default-features = false }
casper-types = { git = "https://github.com/casper-network/casper-node.git", branch = "feat-2.0", default-features = false}
casper-engine-test-support = { git = "https://github.com/casper-network/casper-node.git", branch = "feat-2.0", default-features = false}
casper-execution-engine = { git = "https://github.com/casper-network/casper-node.git", branch = "feat-2.0", default-features = false}
casper-storage = { git = "https://github.com/casper-network/casper-node.git", branch = "feat-2.0", default-features = false}
casper-fixtures = { git = "https://github.com/deuszex/casper-fixtures", branch = "feat-2.0"}