[package]
name = "tests"
version.workspace = true
edition.workspace = true

[dev-dependencies]
casper-types = { workspace = true, features = ["std"] }
casper-event-standard.workspace = true
cep78 = { path = "../contracts/contract" }
casper-engine-test-support = { git = "https://github.com/casper-network/casper-node.git", default-features = false }
casper-execution-engine = { git = "https://github.com/casper-network/casper-node.git", default-features = false }
casper-storage = { git = "https://github.com/casper-network/casper-node.git", default-features = false }
casper-fixtures = { git = "https://github.com/deuszex/casper-fixtures", branch = "feat-2.0" }
serde = { version = "*", default-features = false }
serde_json = { version = "*", default-features = false }
once_cell = "1"
blake2 = { version = "0.9.2", default-features = false }
base16 = { version = "*", default-features = false }
rand = "*"
sha256 = "*"
