[package]
name = "get_approved_session"
version = "2.0.0"
edition = "2021"

[dependencies]
casper-contract = { git = "https://github.com/casper-network/casper-node.git", branch = "feat-2.0"}
casper-types = { git = "https://github.com/casper-network/casper-node.git", branch = "feat-2.0"}

[[bin]]
name = "get_approved_call"
path = "src/main.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true
