[package]
name = "is_approved_for_all_session"
version = "1.5.1"
edition = "2021"

[dependencies]
casper-contract = { git = "https://github.com/casper-network/casper-node.git", branch = "release-2.0.0-rc1"}
casper-types = { git = "https://github.com/casper-network/casper-node.git", branch = "release-2.0.0-rc1"}

[[bin]]
name = "is_approved_for_all_call"
path = "src/main.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true
