[package]
name = "cep78"
version.workspace = true
edition.workspace = true

[dependencies]
casper-types.workspace = true
casper-contract.workspace = true
casper-event-standard = { workspace = true, default-features = false }
serde = { version = "*", default-features = false }
serde_json = { version = "*", default-features = false }
serde-json-wasm = { version = "*", default-features = false }
base16 = { version = "*", default-features = false }
hex = { version = "*", default-features = false }

[[bin]]
name = "cep78"
path = "src/main.rs"
bench = false
doctest = false
test = false
