[package]
name = "minting_contract"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = { git = "https://github.com/casper-network/casper-node.git", branch = "feat-2.0"}
casper-types = { git = "https://github.com/casper-network/casper-node.git", branch = "feat-2.0"}

[[bin]]
name = "minting_contract"
path = "src/main.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true
