[package]
name = "get_approved_session"
version.workspace = true
edition.workspace = true

[dependencies]
casper-types.workspace = true
casper-contract = { workspace = true, features = ["no-std-helpers"] }

[[bin]]
name = "get_approved_session"
path = "src/main.rs"
bench = false
doctest = false
test = false
