[package]
name = "minting_contract"
version.workspace = true
edition.workspace = true

[dependencies]
casper-types.workspace = true
casper-contract = { workspace = true, features = ["no-std-helpers"] }

[[bin]]
name = "minting_contract"
path = "src/main.rs"
bench = false
doctest = false
test = false
